[project]
name = "agentcore"
version = "1.0.0"
description = "web application"
requires-python = ">=3.10,<3.13"

dependencies = [
    # --- Core framework ---
    "fastapi>=0.115.2,<1.0.0",
    "httpx[http2]>=0.27,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "loguru>=0.7.1,<1.0.0",
    "structlog>=25.4.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0,<2.0.0",
    "opentelemetry-instrumentation-httpx>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-redis>=0.46b0,<1.0.0",
    "prometheus_client>=0.20.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "sqlmodel==0.0.22",
    "pydantic>=2.11.1,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "cachetools>=5.5.0,<6.0.0",
    "platformdirs>=4.2.0,<5.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "orjson==3.10.15",
    "alembic>=1.13.0,<2.0.0",
    "passlib>=1.7.4,<2.0.0",
    "bcrypt==4.0.1",
    "pillow>=12.1.1,<13.0.0",
    "docstring-parser>=0.16,<1.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "pandas==2.2.3",
    "duckdb>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "emoji>=2.12.0,<3.0.0",
    "asyncer>=0.0.5,<1.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    "uncurl>=0.0.11,<1.0.0",
    "chardet>=5.2.0,<6.0.0",
    "opentelemetry-api>=1.25.0,<2.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-exporter-prometheus>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "setuptools>=78.1.0,<79.0.0",
    "nanoid>=2.0.0,<3.0.0",
    "filelock>=3.15.4,<4.0.0",
    "grandalf>=0.8.0,<1.0.0",
    "clickhouse-connect==0.7.19",
    "fastapi-pagination>=0.13.1,<1.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "pypdf>=6.7.5,<7.0.0",
    "validators>=0.34.0",
    "greenlet>=3.1.1",
    "jsonquerylang>=1.1.1",
    "psycopg[binary]",
    "pymupdf",
    "reportlab",
    "langgraph>=1.0.8",
    "trustcall",
    "azure-storage-blob>=12.20.0,<13.0.0",
    "azure-keyvault-secrets>=4.9.0,<5.0.0",
    "azure-search-documents>=11.6.0,<12.0.0",
    # Teams Bot Framework integration
    "botbuilder-core>=4.16.0,<5.0.0",
    "botbuilder-schema>=4.16.0,<5.0.0",
    "botbuilder-integration-aiohttp>=4.16.0,<5.0.0",
    "azure-identity>=1.16.0,<2.0.0",
    "msgraph-sdk>=1.0.0,<2.0.0",
    # --- Integrations & extras ---
    "python-pptx==1.0.2",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "PyPDF2==3.0.1",
    "pdf2image==1.17.0",
    "beautifulsoup4==4.12.3",
    "google-search-results>=2.4.1,<3.0.0",
    "google-api-python-client==2.154.0",
    "networkx==3.4.2",
    "fake-useragent==1.5.1",
    "pyarrow>=19.0.1,<23.0.0",
    "types-cachetools>=5.5.0.20240820,<6.0.0",
    "pymongo==4.10.1",
    "supabase>=2.6.0,<3.0.0",
    "certifi>=2023.11.17,<2025.0.0",
    'fastavro==1.9.7; python_version < "3.13"',
    'fastavro>=1.9.8,<2.0.0; python_version >= "3.13"',
    "redis>=5.2.1,<6.0.0",
    "aio-pika>=9.4.0,<10.0.0",
    'pywin32>=310; sys_platform == "win32"',
    "langfuse>=3.0.0,<4.0.0",
    "MarkupSafe==3.0.2",
    "numexpr==2.10.2",
    "langchain==1.2.9",
    "langchain-classic==1.0.1",
    "langchain-core~=1.2.9",
    "langchainhub~=0.1.21",
    "langchain-experimental>=0.4.1,<1.0.0",
    "langchain-community>=0.4.1,<1.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "Markdown==3.8.1",
    "upstash-vector==0.6.0",
    "GitPython==3.1.43",
    "kubernetes==31.0.0",
    "json_repair==0.30.3",
    "lark==1.2.2",
    "jq==1.8.0",
    "opensearch-py==2.8.0",
    # LLM/embedding provider SDKs removed — delegated to model microservice
    "langchain-pinecone>=0.2.13,<1.0.0",
    "langchain-chroma>=1.1.0,<2.0.0",
    "langchain-unstructured==1.0.1",
    "sqlalchemy[aiosqlite]>=2.0.38,<3.0.0",
    "aiofile>=3.9.0,<4.0.0",
    "sseclient-py==1.8.0",
    "openinference-instrumentation-langchain>=0.1.29,<0.1.52",
    # MCP SDK removed — delegated to MCP microservice
    "uv==0.9.6",
    "scipy>=1.15.2,<1.16.2",
    "pydantic-ai-slim>=1.56.0,<2.0.0",
    "langchain-graph-retriever==0.8.0",
    "graph-retriever==0.8.0",
    "cryptography>=46.0.5,<47.0.0",
    "aiosqlite==0.21.0",
    "fastparquet>=2024.11.0,<2025.0.0",
    "opencv-python>=4.11; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "toml>=0.10.2",
    "sqlparse",
    "matplotlib",
    "psycopg2-binary",
    # nemoguardrails, annoy removed — guardrails execution delegated to guardrails-service microservice
    "apscheduler>=3.10",
    "tabulate",
    "dill>=0.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["base/agentcore"]

[project.scripts]
agentcore = "agentcore.__main__:main"

[project.optional-dependencies]
docling = [
    "docling>=2.73.1,<3.0.0",
    "tesserocr>=2.8.0",
    "rapidocr-onnxruntime>=1.4.4",
    "ocrmac>=1.0.0; sys_platform == 'darwin'",
]

audio = [
    "webrtcvad>=2.0.10",
]

couchbase = [
    "couchbase>=4.2.1"
]
cassio = [
    "cassio>=0.1.7"
]
local = [
    "llama-cpp-python~=0.2.0",
    "sentence-transformers>=2.3.1",
    "ctransformers>=0.2.10"
]

nv-ingest = [
    # NOTE: These must be removed in order to run `uv lock --upgrade` or `uv sync --upgrade`
    # due to incompatibility with <3.12 and how uv handles lockfile creation.
    # If upgrading, ensure `uv lock` and `uv sync` are run after upgrade with these,
    # and that afterward, the lockfile contains nv-ingest.
    "nv-ingest-api==25.6.2,<26.0.0 ; python_version >= '3.13'",
    "nv-ingest-client==25.6.3,<26.0.0 ; python_version >= '3.13'",
]

postgresql = [
    "sqlalchemy[postgresql_psycopg2binary]>=2.0.38,<3.0.0",
    "sqlalchemy[postgresql_psycopg]>=2.0.38,<3.0.0",
]

[tool.uv]
override-dependencies = [
    # temporary force a newer python-pptx
    "python-pptx>=1.0.2",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,*.trig.,**/node_modules/**,./stuff/*,*.csv'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'


[tool.pytest.ini_options]
timeout = 150
timeout_method = "signal"
minversion = "6.0"
testpaths = ["tests"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "async_test",
    "api_key_required",
    "no_blockbuster",
    "benchmark",
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:benchmark"

[tool.coverage.run]
command_line = """
    -m pytest --ignore=tests/integration
    --cov --cov-report=term --cov-report=html
    --instafail -ra -n auto -m "not api_key_required"
"""
source = ["base/agentcore/"]
omit = ["*/alembic/*", "tests/*", "*/__init__.py"]


[tool.coverage.report]
sort = "Stmts"
skip_empty = true
show_missing = false
ignore_errors = true


[tool.coverage.html]
directory = "coverage"


[tool.ruff]
exclude = ["base/agentcore/alembic/*", "src/frontend/tests/assets/*"]
line-length = 120

[tool.ruff.lint]
flake8-annotations.mypy-init-return = true
flake8-bugbear.extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
]
flake8-type-checking.runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "typing.TypedDict",
    "typing_extensions.TypedDict",
]
pydocstyle.convention = "google"
select = ["ALL"]
ignore = [
    "C90", # McCabe complexity
    "CPY", # Missing copyright
    "COM812", # Messes with the formatter
    "ERA", # Eradicate commented-out code
    "FIX002", # Line contains TODO
    "ISC001", # Messes with the formatter
    "PERF203", # Rarely useful
    "PLR09", # Too many something (arg, statements, etc)
    "RUF012", # Pydantic models are currently not well detected
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link in TODO
    "TRY301", # A bit too harsh (Abstract `raise` to an inner function)
    "PLC0415", # Inline imports
    "D10", # Missing docstrings
    "PLW1641", # Object does not implement `__hash__` method
    # Rules that are TODOs
    "ANN", # Missing type annotations
    "SLF001", # Using private attributes outside of class
    "D1", # Missing docstrings
]

# Preview rules that are not yet activated
external = ["RUF027"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["D1", "INP", "T201"]
"base/agentcore/alembic/versions/*" = ["INP001", "D415", "PGH003"]
"tests/*" = [
    "D1",
    "PLR2004",
    "S101",
    "SLF001",
    "BLE001",  # allow broad-exception catching in tests
]
"base/agentcore/api/*" = [
    "TCH", # FastAPI needs to evaluate types at runtime
]
"base/agentcore/{components/tools/python_code_structured_tool.py,custom/code_parser/code_parser.py,utils/validate.py}" = [
    "S102", # Use of exec
]
"base/agentcore/services/cache/*" = [
    "S301", # Use of pickle
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [ "io", "logging", "socket"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "base/agentcore"
ignore-paths = ["base/agentcore/components/"]
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
namespace_packages = true
mypy_path = "base"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
