[project]
name = "graph-rag-service"
version = "1.0.0"
description = "Neo4j Graph RAG microservice for AgentCore"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.38,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "cryptography>=46.0.5,<47.0.0",
    "neo4j>=5.20.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.8.0",
    "toml>=0.10.2",
]

[project.scripts]
graph-rag-service = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
