[project]
name = "guardrails-service"
version = "1.0.0"
description = "Guardrails microservice (NeMo Guardrails execution & catalogue) for AgentCore"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.38,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "cryptography>=46.0.5,<47.0.0",
    "azure-identity>=1.20.0,<2.0.0",
    "azure-keyvault-secrets>=4.9.0,<5.0.0",
    "nemoguardrails>=0.10.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.7.0",
    "en-core-web-sm",
    "annoy",
    "toml>=0.10.2",
]

[project.scripts]
guardrails-service = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
