[project]
name = "pinecone-service"
version = "1.0.0"
description = "Pinecone Vector Store microservice for AgentCore"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.38,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "cryptography>=46.0.5,<47.0.0",
    "pinecone>=5.0.0",
    "numpy>=1.24.0",
    "tenacity>=8.2.0,<10.0.0",
    "toml>=0.10.2",
]

[project.scripts]
pinecone-service = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
