[project]
name = "region-gateway"
version = "1.0.0"
description = "Cross-region dashboard proxy for AgentCore (hub-only service)"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "azure-identity>=1.20.0,<2.0.0",
    "azure-keyvault-secrets>=4.9.0,<5.0.0",
]

[project.scripts]
region-gateway = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
